# tinygrad

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  build.sh  dataset.cpp  dataset.h  graph.cpp  graph.h  main.cpp  models.cpp  models.h  node.cpp  node.h  nodeimplementations.cpp  nodeimplementations.h  tensor.cpp  tensor.h  test_autoencoder.cpp  test_logistic_regression.cpp  test_neural_network.cpp  utils.cpp  utils.h
examples/: test_autoencoder.cpp  test_logistic_regression.cpp  test_neural_network.cpp
include/: configuration.h  dataset.h  graph.h  matrix.h  models.h  node.h  nodeimplementations.h  predefined_models.h  tensor.h  utils.h
scripts/: create_dataset.py
src/: dataset.cpp  graph.cpp  matrix.cpp  models.cpp  node.cpp  nodeimplementations.cpp  predefined_models.cpp  tensor.cpp  utils.cpp
